--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odigo Travel</title>
+    <script src="https://kit.fontawesome.com/e4878a7996.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="img/free-icon-mountain-4135908.png">
 </head>
 <body>
+    <section class="banner-section">
+        <header id="header-section">
+            <div class="container">
+                <div class="menu-wrapper">
+                    <nav class="menu-container">
+                        <div class="header-logo">
+                            <a href="#"><img src="img/odigo-Logo.png"></a>
+                        </div>
+                        <div class="toggle-btn">
+                            <i class="fa-solid fa-bars"></i>
+                        </div>
+                        <ul class="drop-down-menu">
+                            <li class="menu-list__item"><a href="#">Articles</a></li>
+                            <li class="menu-list__item"><a href="#">Locations</a></li>
+                            <li class="menu-list__item"><a href="#">Videos</a></li>
+                            <li class="menu-list__item"><a href="#">Sign in</a></li>
+                        </ul>
+                        <ul class="menu-list">
+                            <li class="menu-list__item"><a href="#">Articles</a></li>
+                            <li class="menu-list__item"><a href="#">Locations</a></li>
+                            <li class="menu-list__item"><a href="#">Videos</a></li>
+                            <li class="menu-list__item"><a href="#">Sign in</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </header>
+
+        <div class="container">
+            <div class="banner-container" data-aos="fade-right">
+                <div class="banner-title">
+                    <h1>Discover Amazing places in Japan</h1>
+                </div>
+                <div class="banner-text">
+                    <p>
+                        Jump off balcony, onto stranger's head. 
+                        Chase ball of string hide when guests come over. Being gorgeous 
+                        with belly side up i could pee on this if i had the energy but 
+                        under the bed, for attack the child, open the door,
+                    </p> 
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
