Добавил секцию Преимущества

--- a/src/index.html
+++ b/src/index.html
@@ -52,5 +52,60 @@
             </div>
         </div>
     </section>
+
+    <main>
+        <div class="container">
+            <div class="container-benefits">
+                <div class="benefits-title">
+                    <h2>Benefits of Odigo</h2>
+                </div>
+                <div class="benefits-list">
+                    <div class="benefits-list__item">
+                        <div class="benefits-list__item__img">
+                            <img src="img/benefits/church.png">
+                        </div>
+                        <div class="benefits-list__item__title">
+                            <h3>Welcome to Odigo!</h3>
+                        </div>
+                        <div class="benefits-list__item__text">
+                            <p>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        </div>
+                        <div >
+                            <a class="benefits-list__item__btn" href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="benefits-list__item">
+                        <div class="benefits-list__item__img">
+                            <img src="img/benefits/man.png">
+                        </div>
+                        <div class="benefits-list__item__title">
+                            <h3>Your Personal Japan Guide</h3>
+                        </div>
+                        <div class="benefits-list__item__text">
+                            <p>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        </div>
+                        <div >
+                            <a class="benefits-list__item__btn" href="#">Learn more</a>
+                        </div>
+                    </div>
+                    <div class="benefits-list__item">
+                        <div class="benefits-list__item__img">
+                            <img src="img/benefits/shop.png">
+                        </div>
+                        <div class="benefits-list__item__title">
+                            <h3>Promoting Local Businesses</h3>
+                        </div>
+                        <div class="benefits-list__item__text">
+                            <p>Jump off balcony, onto stranger's head. Chase ball of string hide when guests come over.</p>
+                        </div>
+                        <div >
+                            <a class="benefits-list__item__btn" href="#">Learn more</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </main>
 </body>
 </html>
