Добавил inspired-section

--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,64 @@
                     </div>
                 </div>
             </div>
+
+            <section class="inspired-section">
+                <div class="inspired-caption">
+                    <div class="inspired-title">
+                        Get inspired for your next trip
+                    </div>
+                    <div class="inspired-container-link">
+                        <a href="#">
+                        <div class="inspired-btn">
+                            view all
+                            </div>
+                            <i class="fa-solid fa-arrow-right size-arrow"></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="inspired-places-container">
+                    <div class="inspired-places__item size-lg" data-aos="fade-right">
+                        <div>
+                            <img class="inspired-places__item_img" src="img/inspired_places/fuji.png">
+                        </div>
+                        <div class="inspired-places__item_place">
+                            Mount Fuji
+                        </div>
+                    </div>
+                    <div class="inspired-places__item size-lg" data-aos="fade-left">
+                        <div>
+                            <img class="inspired-places__item_img" src="img/inspired_places/kyoto.png">
+                        </div>
+                        <div class="inspired-places__item_place">
+                            Kyoto
+                        </div>
+                    </div>
+                    <div class="inspired-places__item size-md size-full" data-aos="fade-up">
+                        <div>
+                            <img class="inspired-places__item_img" src="img/inspired_places/tokyo.png">
+                        </div>
+                        <div class="inspired-places__item_place">
+                            Tokyo
+                        </div>
+                    </div>
+                    <div class="inspired-places__item size-md" data-aos="fade-up">
+                        <div>
+                            <img class="inspired-places__item_img" src="img/inspired_places/niigata.png">
+                        </div>
+                        <div class="inspired-places__item_place">
+                            Niigata
+                        </div>
+                    </div>
+                    <div class="inspired-places__item size-md" data-aos="fade-up">
+                        <div>
+                            <img class="inspired-places__item_img" src="img/inspired_places/sapporo.png">
+                        </div>
+                        <div class="inspired-places__item_place">
+                            Sapporo
+                        </div>
+                    </div>
+                </div>
+            </section>
             
         </div>
     </main>
