Добавил секцию Префектуры

--- a/src/index.html
+++ b/src/index.html
@@ -162,6 +162,61 @@
                     </div>
                 </div>
             </section>
+
+            <section class="prefecture-neighborhood-section">
+                <div class="pr-ng-item">
+                    <div class="pr-ng-item__container_img" data-aos="fade-right">
+                        <img class="pr-ng-item__img" src="img/prefecture.png">
+                    </div>
+                    <div class="pr-ng-item__info" data-aos="fade-left">
+                        <div class="pr-ng-item__title">
+                            Prefecture in Focus: Tottori
+                        </div>
+                        <div class="pr-ng-item__text">
+                            <p>
+                                Jump off balcony, onto stranger's head. Chase ball of string 
+                                hide when guests come over. Being gorgeous with belly side up 
+                                i could pee on this if i had the energy but under the bed, for 
+                                attack the child, open the door, 
+                            </p>
+                        </div>
+                        <div class="pr-ng-item__link">
+                            <a href="#">
+                                <div class="pr-ng-item__link__btn">
+                                    VIEW PREFECTURE
+                                </div>
+                                <i class="fa-solid fa-arrow-right size-arrow"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="pr-ng-item">
+                    <div class="pr-ng-item__container_img" data-aos="fade-left">
+                        <img class="pr-ng-item__img" src="img/neighborhood.png">
+                    </div>
+                    <div class="pr-ng-item__info" data-aos="fade-right">
+                        <div class="pr-ng-item__title">
+                            Featured Neighborhood: Kyoto’s Arashiyama
+                        </div>
+                        <div class="pr-ng-item__text">
+                            <p>
+                                Jump off balcony, onto stranger's head. Chase ball of string 
+                                hide when guests come over. Being gorgeous with belly side up 
+                                i could pee on this if i had the energy but under the bed, for 
+                                attack the child, open the door, 
+                            </p>
+                        </div>
+                        <div class="pr-ng-item__link">
+                            <a href="#">
+                                <div class="pr-ng-item__link__btn">
+                                    VIEW NEIGHBORHOOD
+                                </div>
+                                <i class="fa-solid fa-arrow-right size-arrow"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
             
         </div>
     </main>
