Добавил секцию "Лучшие места"

--- a/src/index.html
+++ b/src/index.html
@@ -217,8 +217,198 @@
                     </div>
                 </div>
             </section>
-            
+
+            <section class="best-places-section">
+                <div class="best-places-caption">
+                    <div class="best-places-title">
+                        Today top places to visit
+                    </div>
+                </div>
+                <div class="best-places-list">
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/nagoya.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>NAGOYA</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/NIIGATA.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>niigata</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/OSAKA.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>osaka</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/saitama.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>saitama</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/ueno.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>ueno</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                    <div class="best-places-list__item" data-aos="flip-up">
+                        <div class="best-places-list__item_img">
+                            <img src="img/best_places/SHIBUYA.png">
+                            <div class="img-caption" data-aos="fade" data-aos-delay="300">
+                                <div class="img-caption__title">
+                                    <h4>shibuya</h4>
+                                </div>
+                                <div class="img-caption__activity">
+                                    <div class="img-caption__activity__likes">
+                                        221
+                                        <i class="fa-solid fa-heart"></i>
+                                    </div>
+                                    <div class="img-caption__activity__comments">
+                                        50
+                                        <i class="fa-regular fa-comment-dots"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="best-places-list_item_info">
+                            <p>
+                                Jump off balcony, onto stranger's head. 
+                                Chase ball of string hide when guests come over. 
+                                Being gorgeous with belly side up i could pee on this.
+                            </p>
+                        </div>
+                        <button class="best-places-list__item_btn">
+                            see more
+                        </button>
+                    </div>
+                </div>
+            </section>
         </div>
+        
     </main>
 </body>
 </html>
