--- a/src/index.html
+++ b/src/index.html
@@ -409,6 +409,9 @@
             </section>
         </div>
         
+        <section class="video-banner-section" loading="lazy">
+            <i class="fa-regular fa-circle-play"></i>
+        </section>
     </main>
 </body>
 </html>
