--- a/src/index.html
+++ b/src/index.html
@@ -413,5 +413,50 @@
             <i class="fa-regular fa-circle-play"></i>
         </section>
     </main>
+
+    <footer id="footer-section">
+        <div class="container">
+            <div class="footer-container">
+                <div class="footer-logo">
+                    <img src="img/odigo-Logo.png">
+                </div>
+                <div class="footer-info">
+                    <div class="footer-info__item">
+                        <div class="footer-info__item__company">
+                            <ul class="company-list">
+                                Company
+                                <li class="company-list__item"><a href="#">About</a></li>
+                                <li class="company-list__item"><a href="#">Team</a></li>
+                                <li class="company-list__item"><a href="#">Careers</a></li>
+                                <li class="company-list__item"><a href="#">Privacy Policy</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-info__item">
+                        <div class="footer-info__item__locations">
+                            <ul class="company-list">
+                                Locations
+                                <li class="company-list__item"><a href="#">Tokyo</a></li>
+                                <li class="company-list__item"><a href="#">Kyoto</a></li>
+                                <li class="company-list__item"><a href="#">Osaka</a></li>
+                                <li class="company-list__item"><a href="#">Hokkaido</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-info__item">
+                        <div class="footer-info__item__social">
+                            <ul class="company-list">
+                                Social Media
+                                <li class="company-list__item"><a href="#">Facebook</a></li>
+                                <li class="company-list__item"><a href="#">Twitter</a></li>
+                                <li class="company-list__item"><a href="#">Instagram</a></li>
+                                <li class="company-list__item"><a href="#">Youtube</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
